--- a/models/Medicine Recommendation System.ipynb
+++ b/models/Medicine Recommendation System.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "4e4766bf",
    "metadata": {},
    "outputs": [],
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "56ce4778",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Training.csv')"
+    "dataset = pd.read_csv('../datasets/Training.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "5f18d6d2",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[4920 rows x 133 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "f49b2b12",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "a49049bd",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "(4920, 133)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "5b9c4a9e",
    "metadata": {},
    "outputs": [
@@ -628,6 +628,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3c8927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "36cee3c8",
    "metadata": {},
@@ -662,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "id": "fdd98daa",
    "metadata": {},
    "outputs": [],
@@ -674,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "id": "4dd13145",
    "metadata": {},
    "outputs": [],
@@ -685,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "8bf40f9d",
    "metadata": {},
    "outputs": [
@@ -694,14 +702,14 @@
      "output_type": "stream",
      "text": [
       "predicted disease : [40]\n",
-      "Actual Disease : 40\n"
+      "Actual Disease : 34\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\Naresh Khatri\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -714,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "id": "786bfd1a",
    "metadata": {},
    "outputs": [
@@ -730,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\Naresh Khatri\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -759,22 +767,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "id": "767ed813",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym_des = pd.read_csv(\"symtoms_df.csv\")\n",
-    "precautions = pd.read_csv(\"precautions_df.csv\")\n",
-    "workout = pd.read_csv(\"workout_df.csv\")\n",
-    "description = pd.read_csv(\"description.csv\")\n",
-    "medications = pd.read_csv('medications.csv')\n",
-    "diets = pd.read_csv(\"diets.csv\")"
+    "sym_des = pd.read_csv(\"../datasets/symtoms_df.csv\")\n",
+    "precautions = pd.read_csv(\"../datasets/precautions_df.csv\")\n",
+    "workout = pd.read_csv(\"../datasets/workout_df.csv\")\n",
+    "description = pd.read_csv(\"../datasets/description.csv\")\n",
+    "medications = pd.read_csv('../datasets/medications.csv')\n",
+    "diets = pd.read_csv(\"../datasets/diets.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "id": "6cb123a9",
    "metadata": {},
    "outputs": [],
@@ -813,50 +821,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "a36b1e93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your symptoms.......itching,skin_rash,nodal_skin_eruptions\n",
-      "=================predicted disease============\n",
-      "Fungal infection\n",
-      "=================description==================\n",
-      "Fungal infection is a common skin condition caused by fungi.\n",
-      "=================precautions==================\n",
-      "1 :  bath twice\n",
-      "2 :  use detol or neem in bathing water\n",
-      "3 :  keep infected area dry\n",
-      "4 :  use clean cloths\n",
-      "=================medications==================\n",
-      "5 :  ['Antifungal Cream', 'Fluconazole', 'Terbinafine', 'Clotrimazole', 'Ketoconazole']\n",
-      "=================workout==================\n",
-      "6 :  Avoid sugary foods\n",
-      "7 :  Consume probiotics\n",
-      "8 :  Increase intake of garlic\n",
-      "9 :  Include yogurt in diet\n",
-      "10 :  Limit processed foods\n",
-      "11 :  Stay hydrated\n",
-      "12 :  Consume green tea\n",
-      "13 :  Eat foods rich in zinc\n",
-      "14 :  Include turmeric in diet\n",
-      "15 :  Eat fruits and vegetables\n",
-      "=================diets==================\n",
-      "16 :  ['Antifungal Diet', 'Probiotics', 'Garlic', 'Coconut oil', 'Turmeric']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 1\n",
     "# Split the user's input into a list of symptoms (assuming they are comma-separated) # itching,skin_rash,nodal_skin_eruptions\n",
@@ -896,47 +864,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "id": "2d7ee79b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your symptoms.......yellow_crust_ooze,red_sore_around_nose,small_dents_in_nails,inflammatory_nails,blister\n",
-      "=================predicted disease============\n",
-      "Impetigo\n",
-      "=================description==================\n",
-      "Impetigo is a highly contagious skin infection causing red sores that can break open.\n",
-      "=================precautions==================\n",
-      "1 :  soak affected area in warm water\n",
-      "2 :  use antibiotics\n",
-      "3 :  remove scabs with wet compressed cloth\n",
-      "4 :  consult doctor\n",
-      "=================medications==================\n",
-      "5 :  ['Topical antibiotics', 'Oral antibiotics', 'Antiseptics', 'Ointments', 'Warm compresses']\n",
-      "=================workout==================\n",
-      "6 :  Maintain good hygiene\n",
-      "7 :  Stay hydrated\n",
-      "8 :  Consume nutrient-rich foods\n",
-      "9 :  Limit sugary foods and beverages\n",
-      "10 :  Include foods rich in vitamin C\n",
-      "11 :  Consult a healthcare professional\n",
-      "12 :  Follow medical recommendations\n",
-      "13 :  Avoid scratching\n",
-      "14 :  Take prescribed antibiotics\n",
-      "15 :  Practice wound care\n",
-      "=================diets==================\n",
-      "16 :  ['Impetigo Diet', 'Antibiotic treatment', 'Fruits and vegetables', 'Hydration', 'Protein-rich foods']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-      "  warnings.warn(\n"
+     "ename": "NameError",
+     "evalue": "name 'get_predicted_value' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Remove any extra characters, if any\u001b[39;00m\n\u001b[0;32m      6\u001b[0m user_symptoms \u001b[38;5;241m=\u001b[39m [symptom\u001b[38;5;241m.\u001b[39mstrip(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[]\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m symptom \u001b[38;5;129;01min\u001b[39;00m user_symptoms]\n\u001b[1;32m----> 7\u001b[0m predicted_disease \u001b[38;5;241m=\u001b[39m \u001b[43mget_predicted_value\u001b[49m(user_symptoms)\n\u001b[0;32m      9\u001b[0m desc, pre, med, die, wrkout \u001b[38;5;241m=\u001b[39m helper(predicted_disease)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=================predicted disease============\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_predicted_value' is not defined"
      ]
     }
    ],
@@ -979,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "a8d5df35",
    "metadata": {},
    "outputs": [
@@ -1009,7 +949,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
